--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "busboy": "^1.6.0"
+    "bcryptjs": "^2.4.3",
+    "busboy": "^1.6.0",
+    "config": "^3.3.9",
+    "jsonwebtoken": "^9.0.0",
+    "prompt-sync": "^4.2.0",
+    "uid": "^2.0.2"
   }
 }
