--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
     "config": "^3.3.9",
     "jsonwebtoken": "^9.0.0",
+    "node-cron": "^3.0.2",
     "prompt-sync": "^4.2.0",
+    "querystring": "^0.2.1",
     "uid": "^2.0.2"
   }
 }
